<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_responses"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/title_responses" />

    <item
        android:id="@+id/navigation_createInvitation"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_create_invitation" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/person"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/title_notifications" />

</menu>