<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    tools:context=".ui.profile.ProfileFragment"
    android:id="@+id/fragment_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F6F5F5"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#AB0707"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:foregroundGravity="center_horizontal"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/personName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Name"
                    android:textColor="#fff"
                    android:textSize="23dp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="View Profile Information"
                    android:textColor="#670303"
                    android:textSize="25sp"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                >
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/phone"/>
                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+1 1234567890"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilee"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/person" />

            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="About goes here"
                android:textColor="#000"
                android:textSize="18dp" />

        </LinearLayout>

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="#AB0707"
            android:text="Update Profile"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            ></Button>

        <Button
            android:id="@+id/logoutProfileButton"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#AB0707"
            android:text="Logout"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>